# libpabc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
docs/: CMakeLists.txt
include/pabc/: pabc.h  pabc_attributes.h  pabc_context.h  pabc_credential.h  pabc_issuer.h  pabc_json_constants.h  pabc_json_creds.h  pabc_nonce.h  pabc_serialize.h  pabc_user.h  pabc_utils.h  pabc_verifier.h
src/: CMakeLists.txt  attributes.c  attributes.h  cli_helper.c  cli_helper.h  context.c  context.h  credential.h  hash.c  hash.h  issuer.c  issuer.h  json_creds.c  json_creds.h  nonce.c  nonce.h  pabc-issuer.c  pabc-user.c  pabc-verifier.c  serialize.c  serialize.h  user.c  user.h  utils.c  utils.h  verifier.c  verifier.h
tests/: CMakeLists.txt  cli_example.sh
tests/cred_issue_test/: 03_issue_cred.c  CMakeLists.txt  credential_request.json  issuer_secret_key.json
tests/cred_request_test/: 02_cred_request.c  CMakeLists.txt  issuer_nonce.json
tests/proof_test/: 04_proof.c  CMakeLists.txt  credential.json  user_context.json
tests/setup_test/: 01_setup.c  CMakeLists.txt
tests/verify_test/: 05_verify.c  CMakeLists.txt  proof.json  public_parameters.json
